--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,7 @@ h2 {
     background-image: url(./images/chalkboard-black.jpg);
     margin-bottom: 15px;
     padding: 0 30px;
+    padding-bottom: 15px;
 }
 #header-div {
     width: 400px;
@@ -29,4 +30,21 @@ h2 {
 a {
     text-decoration: none;
     color: lightblue
+}
+#comment {
+    color: white;
+    background-color: black;
+    border: none;
+    border-radius: 3px;
+    padding: 5px;
+}
+#comment-button:hover {
+    cursor: pointer;
+}
+#comment-button {
+    color: white;
+    background-color: black;
+    border: none;
+    border-radius: 3px;
+    padding: 5px;
 }
